--- a/Src/HERE.Api Example Solution/Here.Api.Example/Here.Api.Example.csproj
+++ b/Src/HERE.Api Example Solution/Here.Api.Example/Here.Api.Example.csproj
@@ -1,22 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<Version>6.0.0</Version>
+		<FileVersion>6.0.0</FileVersion>
+		<AssemblyVersion>6.0.0</AssemblyVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="credentials.properties" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="credentials.properties" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="credentials.properties">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="credentials.properties">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Here.Api\Here.Api.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Here.Api\HERE.Api.csproj" />
+	</ItemGroup>
 
 </Project>
