--- a/Src/HERE.Api Example Solution/HERE.GpsSimulator/Properties/launchSettings.json
+++ b/Src/HERE.Api Example Solution/HERE.GpsSimulator/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "commandLineArgs": "generate --origin \"600 E Grand Avenue, Chicago IL\" --destination \"1300 Fox St Denver CO 80204\" --departuretime \"11/21/2021 11:00 AM\" --grossweight 75000 --interval 00:15:00 --axlecount 5 --trailercount 1 --type tractor --routingmode short --regulation true --lastrest 2 --outputfile \"%USERPROFILE%/Desktop/gps-data.json\"",
       "environmentVariables": {
-        "LOG_FOLDER": "%TEMP%\\HERE"
+        "LOG_FOLDER": "%TEMP%"
       }
     }
   }
