--- a/Src/HERE.Api Example Solution/HERE.GpsSimulator/HERE.GpsSimulator.csproj
+++ b/Src/HERE.Api Example Solution/HERE.GpsSimulator/HERE.GpsSimulator.csproj
@@ -8,6 +8,7 @@
 		<AssemblyVersion>6.0.0</AssemblyVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<DebugType>portable</DebugType>
 	</PropertyGroup>
 
 	<ItemGroup>
