--- a/Src/HERE.Api Example Solution/HERE.GpsSimulator/HERE.GpsSimulator.csproj
+++ b/Src/HERE.Api Example Solution/HERE.GpsSimulator/HERE.GpsSimulator.csproj
@@ -42,7 +42,7 @@
 		<PackageReference Include="Diamond.Core.CommandLine.Model" Version="6.0.0" />
 		<PackageReference Include="Diamond.Core.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Diamond.Core.Extensions.Hosting" Version="6.0.0" />
-		<PackageReference Include="Diamond.Core.Rules" Version="5.1.0" />
+		<PackageReference Include="Diamond.Core.Rules" Version="6.0.0" />
 		<PackageReference Include="Diamond.Core.Workflow" Version="6.0.0" />
 		<PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
@@ -50,6 +50,7 @@
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="System.CommandLine.Rendering" Version="0.3.0-alpha.21216.1" />
 	</ItemGroup>
 
 	<ItemGroup>
