--- a/Src/HERE.Api Example Solution/HERE.GpsSimulator/appsettings.json
+++ b/Src/HERE.Api Example Solution/HERE.GpsSimulator/appsettings.json
@@ -3,7 +3,7 @@
     "Using": [ "Serilog.Sinks.File" ],
     "MinimumLevel": "Verbose",
     "WriteTo": [
-      { "Name": "Console" },
+      //{ "Name": "Console" },
       {
         "Name": "File",
         "Args": {
