--- a/Src/HERE.Api Example Solution/HERE.GpsSimulator/Properties/launchSettings.json
+++ b/Src/HERE.Api Example Solution/HERE.GpsSimulator/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "HERE.GpsSimulator": {
       "commandName": "Project",
-      "commandLineArgs": "[output:ansi]  generate --origin \"600 E Grand Avenue, Chicago IL\" --destination \"1300 Fox St Denver CO 80204\" --departuretime \"11/21/2021 11:00 AM\" --grossweight 75000 --interval 00:15:00 --axlecount 5 --trailercount 1 --type tractor --routingmode short --regulation true --lastrest 2 --outputfile \"%USERPROFILE%/Desktop/gps-data.json\"",
+      "commandLineArgs": "[output:ansi]  generate --origin \"600 E Grand Avenue, Chicago IL\" --destination \"1300 Fox St Denver CO 80204\" --departuretime \"11/21/2021 11:00 AM\" --grossweight 75000 --interval 00:15:00 --axlecount 5 --trailercount 1 --type tractor --routingmode short --regulation true --lastrest 2 --outputfile \"%USERPROFILE%/Desktop/gps-data.json\" --reference1 \"TRK12345\" --reference2 \"APPT000110\" --reference3 \"ABC123\"",
       "environmentVariables": {
         "LOG_FOLDER": "%TEMP%"
       }
