--- a/Src/HERE.Api Example Solution/Here.Api.Example/credentials.properties
+++ b/Src/HERE.Api Example Solution/Here.Api.Example/credentials.properties
@@ -1,5 +1,5 @@
-here.user.id = HERE-a31d3232-713a-41b3-8c58-45cd1d734042
-here.client.id = tr63z3YJo5H8SrtVCSDP
-here.access.key.id = zCEmOWiUyLXi0hGSszusrg
-here.access.key.secret = NM_gqT4UxUT7uoOYGli3vXkZv9--UdMUjvnRaaBLOK9pAog3C-FwAseZq9L3uzFZvkr5CH5gevhWy771fQxmEQ
+here.user.id = {code}
+here.client.id = {client.id}
+here.access.key.id = {access.key.id}
+here.access.key.secret = {access.key.secret}
 here.token.endpoint.url = https://account.api.here.com/oauth2/token
