--- a/Src/HERE.Api Example Solution/Here.Api.Example/Here.Api.Example.csproj
+++ b/Src/HERE.Api Example Solution/Here.Api.Example/Here.Api.Example.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
+		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
+		<Version>7.0.0</Version>
+		<FileVersion>7.0.0</FileVersion>
+		<AssemblyVersion>7.0.0</AssemblyVersion>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
-		<Version>6.0.8</Version>
-		<FileVersion>6.0.8</FileVersion>
-		<AssemblyVersion>6.0.8</AssemblyVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
