--- a/Src/HERE.Api Example Solution/HERE.GpsSimulator/HERE.GpsSimulator.csproj
+++ b/Src/HERE.Api Example Solution/HERE.GpsSimulator/HERE.GpsSimulator.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
-		<Version>7.0.1</Version>
-		<FileVersion>7.0.1</FileVersion>
-		<AssemblyVersion>7.0.1</AssemblyVersion>
+		<TargetFramework>net8.0</TargetFramework>
+		<Version>8.0.1</Version>
+		<FileVersion>8.0.1</FileVersion>
+		<AssemblyVersion>8.0.1</AssemblyVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<DebugType>portable</DebugType>
@@ -38,19 +38,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Diamond.Core.CommandLine" Version="6.0.2" />
-		<PackageReference Include="Diamond.Core.CommandLine.Model" Version="6.0.2" />
-		<PackageReference Include="Diamond.Core.Extensions.DependencyInjection" Version="6.0.2" />
-		<PackageReference Include="Diamond.Core.Extensions.Hosting" Version="6.0.2" />
-		<PackageReference Include="Diamond.Core.Rules" Version="6.0.2" />
-		<PackageReference Include="Diamond.Core.Workflow" Version="6.0.2" />
-		<PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
-		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+		<PackageReference Include="Diamond.Core.CommandLine" Version="8.0.0" />
+		<PackageReference Include="Diamond.Core.CommandLine.Model" Version="8.0.0" />
+		<PackageReference Include="Diamond.Core.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Diamond.Core.Extensions.Hosting" Version="8.0.0" />
+		<PackageReference Include="Diamond.Core.Rules" Version="8.0.0" />
+		<PackageReference Include="Diamond.Core.Workflow" Version="8.0.0" />
+		<PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
 		<PackageReference Include="Serilog.Settings.AppSettings" Version="2.2.2" />
-		<PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
-		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+		<PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-		<PackageReference Include="System.CommandLine.Rendering" Version="0.3.0-alpha.21216.1" />
 	</ItemGroup>
 
 	<ItemGroup>
