--- a/Src/HERE.Api Example Solution/Here.Api.Example/Here.Api.Example.csproj
+++ b/Src/HERE.Api Example Solution/Here.Api.Example/Here.Api.Example.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
-		<Version>7.0.1</Version>
-		<FileVersion>7.0.1</FileVersion>
-		<AssemblyVersion>7.0.1</AssemblyVersion>
+		<TargetFramework>net8.0</TargetFramework>
+		<Version>8.0.1</Version>
+		<FileVersion>8.0.1</FileVersion>
+		<AssemblyVersion>8.0.1</AssemblyVersion>
 		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 
