--- a/Src/HERE.Api Example Solution/Here.Api/Here.Api.csproj
+++ b/Src/HERE.Api Example Solution/Here.Api/Here.Api.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
-		<Version>7.0.1</Version>
-		<FileVersion>7.0.1</FileVersion>
-		<AssemblyVersion>7.0.1</AssemblyVersion>
+		<TargetFramework>net8.0</TargetFramework>
+		<Version>8.0.1</Version>
+		<FileVersion>8.0.1</FileVersion>
+		<AssemblyVersion>8.0.1</AssemblyVersion>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Description>Provides OAuth 1 authorization for the HERE.com REST API.</Description>
-		<Copyright>Copyright (c) 2021-2022 Daniel Porrey</Copyright>
+		<Copyright>Copyright (c) 2021-2024 Daniel Porrey</Copyright>
 		<PackageProjectUrl>https://github.com/porrey/HERE.com</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/porrey/HERE.com.git</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
@@ -27,6 +27,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 </Project>
